--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": "6.9.1"
+  },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon server"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "mongodb": "*",
-    "mongoskin": "*"
+    "cors": "^2.8.5",
+    "debug": "^0.7.4",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.5.2",
+    "morgan": "^1.0.0",
+    "nodemon": "^2.0.19",
+    "static-favicon": "^1.0.0"
   }
 }
